--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-  "dependencies": {
-    "-": "^0.0.1",
-    "@openzeppelin/contracts": "^4.5.0",
-    "@truffle/hdwallet-provider": "^1.7.0",
-    "save": "^2.4.0"
-  },
-  "name": "save",
-  "version": "1.0.0",
-  "main": "truffle-config.js",
-  "directories": {
-    "test": "test"
+  "name": "hashlips_art_engine",
+  "version": "1.1.1",
+  "description": "HashLips Art Engine is a tool used to create multiple different instances of artworks based on provided layers.",
+  "main": "index.js",
+  "bin": "index.js",
+  "pkg": {
+    "assets": [
+      "layers/**/*",
+      "node_modules/**/*",
+      "src/**/*"
+    ]
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node index.js",
+    "generate": "node index.js",
+    "rarity": "node utils/rarity.js",
+    "preview": "node utils/preview.js",
+    "pixelate": "node utils/pixelate.js",
+    "update_info": "node utils/update_info.js",
+    "preview_gif": "node utils/preview_gif.js",
+    "generate_metadata": "node utils/generate_metadata.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "Daniel Eugene Botha (HashLips)",
+  "license": "MIT",
+  "dependencies": {
+    "canvas": "^2.8.0",
+    "gif-encoder-2": "^1.0.5",
+    "sha1": "^1.1.1"
+  }
 }
